--- a/package.json
+++ b/package.json
@@ -8,6 +8,20 @@
     "dev:core": "npm start --prefix core"
   },
   "devDependencies": {
-    "concurrently": "^6.5.1"
+    "@babel/preset-react": "^7.26.3",
+    "@types/node": "^22.15.1",
+    "concurrently": "^6.5.1",
+    "css-loader": "^7.1.2",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.99.6",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
+  },
+  "dependencies": {
+    "buffer": "^6.0.3",
+    "https-browserify": "^1.0.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.4"
   }
 }
