--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "dev:core": "npm start --prefix core"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@types/node": "^22.15.1",
+    "babel-loader": "^10.0.0",
     "concurrently": "^6.5.1",
     "css-loader": "^7.1.2",
     "style-loader": "^4.0.0",
