ajustando problemas com Eslint

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,15 +6,16 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "https-browserify": "^1.0.0",
+    "module": "^1.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "webpack serve --config webpack.config.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",  
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
