--- a/package.json
+++ b/package.json
@@ -12,19 +12,28 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@types/node": "^22.15.1",
+    "assert": "^2.1.0",
     "babel-loader": "^10.0.0",
+    "buffer": "^6.0.3",
     "concurrently": "^6.5.1",
+    "constants-browserify": "^1.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
+    "customize-cra": "^1.0.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
     "style-loader": "^4.0.0",
-    "webpack": "^5.99.6",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
+    "webpack": "^5.99.7",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1"
   },
   "dependencies": {
-    "buffer": "^6.0.3",
-    "https-browserify": "^1.0.0",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "url": "^0.11.4"
+    "stream-http": "^3.2.0"
   }
 }
