--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,30 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "frontend/package.json",
-        "use": "@vercel/static-build",
-        "config": { "distDir": "build" }
-      },
-      {
-        "src": "backend/package.json",
-        "use": "@vercel/node"
-      },
-      {
-        "src": "core/package.json",
-        "use": "@vercel/node"
+  "version": 2,
+  "builds": [
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": { 
+        "distDir": "build",
+        "buildCommand": "cd frontend && DISABLE_ESLINT_PLUGIN=true npm run build"
       }
-    ],
-    "routes": [
-      { "src": "/api/(.*)", "dest": "/backend/$1" },
-      { "src": "/core/(.*)", "dest": "/core/$1" },
-      { "src": "/(.*)", "dest": "/frontend/$1" }
-    ]
+    },
+    {
+      "src": "backend/package.json",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "core/package.json",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/backend/$1" },
+    { "src": "/core/(.*)", "dest": "/core/$1" },
+    { "src": "/(.*)", "dest": "/frontend/$1" }
+  ],
+  "env": {
+    "DISABLE_ESLINT_PLUGIN": "true",
+    "ESLINT_NO_DEV_ERRORS": "true"
   }
-  
+}
