--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
+    "@craco/craco": "^7.1.0",
     "@types/node": "^22.15.1",
     "assert": "^2.1.0",
     "babel-loader": "^10.0.0",
@@ -26,6 +27,7 @@
     "process": "^0.11.10",
     "react-app-rewired": "^2.2.1",
     "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "style-loader": "^4.0.0",
     "url": "^0.11.4",
     "util": "^0.12.5",
@@ -34,6 +36,6 @@
     "webpack-dev-server": "^5.2.1"
   },
   "dependencies": {
-    "stream-http": "^3.2.0"
+    "axios": "^0.21.4"
   }
 }
