ajustando os caminhos dos controllers para o index.js

--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "pg": "^8.13.1"
+    "pg": "^8.15.6"
   },
   "devDependencies": {
-    "prisma": "^6.3.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "prisma": "^6.3.0"
   }
 }
