--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon index.js",
     "migrate:dev": "npx prisma migrate dev --schema=./prisma/schema.prisma",
     "generate": "npx prisma generate",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo 'Build completed'"
   },
   "keywords": [],
   "author": "",
