--- a/vercel.json
+++ b/vercel.json
@@ -21,7 +21,50 @@
   "routes": [
     { "src": "/api/(.*)", "dest": "/backend/$1" },
     { "src": "/core/(.*)", "dest": "/core/$1" },
-    { "src": "/(.*)", "dest": "/frontend/$1" }
+    { 
+      "src": "/static/(.*)", 
+      "dest": "/frontend/static/$1",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      }
+    },
+    { 
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|json|woff|woff2|svg))", 
+      "dest": "/frontend/$1",
+      "headers": {
+        "cache-control": "public, max-age=0, must-revalidate"
+      }
+    },
+    { 
+      "src": "/(.*)", 
+      "dest": "/frontend/$1",
+      "headers": {
+        "cache-control": "public, max-age=0, must-revalidate"
+      }
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
+        }
+      ]
+    }
   ],
   "env": {
     "DISABLE_ESLINT_PLUGIN": "true",
