--- a/vercel.json
+++ b/vercel.json
@@ -18,32 +18,21 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/backend/$1" },
-    { "src": "/core/(.*)", "dest": "/core/$1" },
-    { 
-      "src": "/static/(.*)", 
-      "dest": "/frontend/static/$1",
-      "headers": {
-        "cache-control": "public, max-age=31536000, immutable"
-      }
-    },
-    { 
-      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|json|woff|woff2|svg))", 
-      "dest": "/frontend/$1",
-      "headers": {
-        "cache-control": "public, max-age=0, must-revalidate"
-      }
-    },
-    { 
-      "src": "/(.*)", 
-      "dest": "/frontend/$1",
-      "headers": {
-        "cache-control": "public, max-age=0, must-revalidate"
-      }
-    }
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/backend/$1" },
+    { "source": "/core/(.*)", "destination": "/core/$1" },
+    { "source": "/(.*)", "destination": "/frontend/$1" }
   ],
   "headers": [
+    {
+      "source": "/(.*)\\.(?:js|css|png|jpg|jpeg|gif|ico|json|woff|woff2|svg)$",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    },
     {
       "source": "/(.*)",
       "headers": [
