voltando as configurações originais do json vercel

--- a/vercel.json
+++ b/vercel.json
@@ -18,42 +18,10 @@
       "use": "@vercel/node"
     }
   ],
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/backend/$1" },
-    { "source": "/core/(.*)", "destination": "/core/$1" },
-    { "source": "/(.*)", "destination": "/frontend/$1" }
-  ],
-  "headers": [
-    {
-      "source": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|json|woff|woff2|svg))",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=0, must-revalidate"
-        }
-      ]
-    },
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=0, must-revalidate"
-        },
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        },
-        {
-          "key": "X-XSS-Protection",
-          "value": "1; mode=block"
-        }
-      ]
-    }
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/backend/$1" },
+    { "src": "/core/(.*)", "dest": "/core/$1" },
+    { "src": "/(.*)", "dest": "/frontend/$1" }
   ],
   "env": {
     "DISABLE_ESLINT_PLUGIN": "true",
