--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
     "migrate:dev": "npx prisma migrate dev --schema=./prisma/schema.prisma",
     "generate": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo 'Build completed'"
+    "build": "npx tsc && echo 'Build completed'",
+    "predeploy": "npm install && npm run build",
+    "deploy": "npm run migrate:dev && npm start"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
-    "prisma": "^6.6.0"
+    "prisma": "^6.6.0",
+    "typescript": "^5.3.0"
   }
 }
