--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,6 @@
   "devDependencies": {
     "nodemon": "^2.0.15",
     "prisma": "^6.6.0",
-    "typescript": "^5.3.0"
+    "typescript": "4.9.5"
   }
 }
