resolvendo conflitos de dependências

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,6 @@
     "generate": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc && echo 'Build completed'",
-    "predeploy": "npm install && npm run build",
     "deploy": "npm run migrate:dev && npm start"
   },
   "keywords": [],
@@ -21,11 +20,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
-    "pg": "^8.15.6"
+    "pg": "^8.15.6",
+    "typescript": "4.9.5",
+    "prisma": "^6.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
-    "prisma": "^6.6.0",
-    "typescript": "4.9.5"
+    "nodemon": "^2.0.15"
   }
 }
