--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "migrate:dev": "npx prisma migrate dev --schema=./prisma/schema.prisma",
     "generate": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc && echo 'Build completed'",
+    "build": "tsc -p tsconfig.json",
     "deploy": "npm run migrate:dev && npm start"
   },
   "keywords": [],
