--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "@craco/craco": "^7.1.0"
   },
   "scripts": {
     "start": "craco start",
