removendo modulos do node e package.json e reinstalando

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,17 @@
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4",
-    "@craco/craco": "^7.1.0"
+    "@craco/craco": "^7.1.0",
+    "stream-http": "^3.2.0",
+    "stream-browserify": "^3.0.0",
+    "url": "^0.11.4",
+    "buffer": "^6.0.3",
+    "path-browserify": "^1.0.1",
+    "util": "^0.12.5",
+    "assert": "^2.1.0",
+    "constants-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10"
   },
   "scripts": {
     "start": "craco start",
