--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "dev:core": "npm start --prefix core"
   },
   "dependencies": {
-    "concurrently": "^6.5.1"
+    "concurrently": "^6.5.1",
+    "@craco/craco": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
-    "@craco/craco": "^7.1.0",
+   
     "@types/node": "^22.15.1",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
