resolvendo conflitos de craco.config.js

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,25 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
+    "assert": "^2.1.0",
     "axios": "^0.21.4",
+    "buffer": "^6.0.3",
+    "constants-browserify": "^1.0.0",
     "cra-template": "1.2.0",
     "https-browserify": "^1.0.0",
     "module": "^1.2.5",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^4.2.4",
-    "@craco/craco": "^7.1.0",
-    "stream-http": "^3.2.0",
     "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "url": "^0.11.4",
-    "buffer": "^6.0.3",
-    "path-browserify": "^1.0.1",
     "util": "^0.12.5",
-    "assert": "^2.1.0",
-    "constants-browserify": "^1.0.0",
-    "os-browserify": "^0.3.0",
-    "process": "^0.11.10"
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "craco start",
@@ -46,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-webpack-plugin": "^5.0.1"
   }
 }
