--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,9 @@
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
-      "config": { 
+      "config": {
         "distDir": "build",
-        "buildCommand": "cd frontend && npm install process https-browserify stream-http stream-browserify url buffer path-browserify util assert constants-browserify os-browserify webpack && DISABLE_ESLINT_PLUGIN=true npm run build"
+        "buildCommand": "cd frontend && npm install --legacy-peer-deps && DISABLE_ESLINT_PLUGIN=true npm run build"
       }
     },
     {
