--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "migrate:dev": "npx prisma migrate dev --schema=./prisma/schema.prisma",
+    "dev": "nodemon index.js",    
+    "migrate:prod": "npx prisma migrate deploy --schema=./prisma/schema.prisma",
     "generate": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "true",
