--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",    
+    "dev": "nodemon index.js",
     "migrate:prod": "npx prisma migrate deploy --schema=./prisma/schema.prisma",
     "generate": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,8 +21,8 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "pg": "^8.15.6",
-    "typescript": "4.9.5",
-    "prisma": "^6.6.0"
+    "prisma": "^6.6.0",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
